2.1.31 added CurseShape and CurseProtectionAmulet